--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.116.0
+gunicorn==23.0.0
 h11==0.16.0
 idna==3.10
 iso8601==2.1.0
@@ -31,3 +32,5 @@ tortoise-orm==0.25.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
+asgiref==3.8.1
+asyncpg
