--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 aerich==0.9.1
+aiofiles==24.1.0
+aioredis==2.0.1
 aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
 asyncclick==8.1.8.0
+babel==2.17.0
 bcrypt==4.3.0
 click==8.2.1
 dictdiffer==0.9.0
@@ -10,20 +14,26 @@ dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.116.0
-gunicorn==23.0.0
 h11==0.16.0
+httptools==0.6.4
 idna==3.10
 iso8601==2.1.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 passlib==1.7.4
+pendulum==3.1.0
+pillow==11.3.0
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pypika-tortoise==0.6.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 pytz==2025.2
+PyYAML==6.0.2
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
@@ -31,6 +41,8 @@ starlette==0.46.2
 tortoise-orm==0.25.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 uvicorn==0.35.0
-asgiref==3.8.1
-asyncpg
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
